--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -107,7 +107,6 @@ import "components/css-components/style-hero.css";
       </div>
     </div>
 
-    
     <form
       action="https://api.web3forms.com/submit"
       method="POST"
@@ -172,21 +171,21 @@ import "components/css-components/style-hero.css";
       <div class="desc-form">
         <p>
           Same Day Appliance Repair - your destination for all your commercial
-          and household appliance repair needs! We deliver professional
-          appliance repair services, that you can rely on with confidence.
+          and Home appliance repair needs! We deliver professional appliance
+          repair services, that you can rely on with confidence.
         </p>
         <p>
           <!-- We have helped thousands of customers, alleviating the stress that
           comes when appliances malfunction. -->
-          Our quick response time and efficient work ethic form the cornerstone of our operational approach,
-          aiming to resolve your appliance issues promptly and proficiently.
+          Our quick response time and efficient work ethic form the cornerstone of
+          our operational approach, aiming to resolve your appliance issues promptly
+          and proficiently.
         </p>
       </div>
 
       <div class="but-request-callback">
         <button type="submit">REQUEST CALLBACK</button>
       </div>
-
     </form>
   </div>
 
