--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -39,7 +39,7 @@ import "css/service-areas/style-service-areas.css";
         <div class="col-two">
           <p>
             <a class="anchor" href="#household-appliance-repair">
-              Household Appliance Repair
+              Home Appliance Repair
             </a>|<a class="anchor" href="#commercial-appliance-repair">
               Commercial Appliance Repair
             </a>|<a class="anchor" href="#heating">
@@ -187,12 +187,12 @@ import "css/service-areas/style-service-areas.css";
         <div
           class="full-commercial-machinery-1920 first-element-without-indentation">
           <div class="header-machinery">
-            <h2>Household Appliance Repair in Los Angeles</h2>
+            <h2>Home Appliance Repair in Los Angeles</h2>
             <p>
-              We offer comprehensive repair services for all household
-              appliances, addressing the needs of each home with expertise and
-              efficiency. Our goal is to provide affordable solutions quickly,
-              reducing downtime and ensuring customer satisfaction.
+              We offer comprehensive repair services for all Home appliances,
+              addressing the needs of each home with expertise and efficiency.
+              Our goal is to provide affordable solutions quickly, reducing
+              downtime and ensuring customer satisfaction.
             </p>
           </div>
           <Unitsappliances />
@@ -260,7 +260,7 @@ import "css/service-areas/style-service-areas.css";
         src="/images/Essential Appliance-Maintenance-Tips-at-home.webp"
         width="600"
         height="264"
-        alt="Maintenance tips for household appliances in Los Angeles"
+        alt="Maintenance tips for Home appliances in Los Angeles"
       />
       <p>
         $bull; Ensuring that the unit is installed correctly as per the
