--- a/src/pages/areas/los-feliz.astro
+++ b/src/pages/areas/los-feliz.astro
@@ -35,7 +35,7 @@ import "css/service-areas/style-service-areas.css";
         <div class="col-two">
           <p>
             <a class="anchor" href="#household-appliance-repair">
-              Household Appliance Repair
+              Home Appliance Repair
             </a>|<a class="anchor" href="#commercial-appliance-repair">
               Commercial Appliance Repair
             </a>|<a class="anchor" href="#heating">
@@ -175,7 +175,7 @@ import "css/service-areas/style-service-areas.css";
         your broken washing machine or conduct an oven repair with ease.
       </p>
       <h3 id="household-appliance-repair">
-        Household Appliance Repair in Los Angeles
+        Home Appliance Repair in Los Angeles
       </h3>
       <a href="#top"
         ><img
@@ -188,7 +188,7 @@ import "css/service-areas/style-service-areas.css";
       >
 
       <p>
-        We offer comprehensive repair services for all household appliances,
+        We offer comprehensive repair services for all Home appliances,
         addressing the needs of each home with expertise and efficiency. Our
         goal is to provide affordable solutions quickly, reducing downtime and
         ensuring customer satisfaction.
@@ -689,9 +689,9 @@ import "css/service-areas/style-service-areas.css";
 
       <p>
         We understand that repairing commercial appliances can be challenging
-        due to their larger size and complexity compared to household ones.
-        Hence, our technicians undergo specialized training in order to
-        effectively troubleshoot any issues with your appliances. Whether it’s a
+        due to their larger size and complexity compared to Home ones. Hence,
+        our technicians undergo specialized training in order to effectively
+        troubleshoot any issues with your appliances. Whether it’s a
         malfunctioning refrigerator at your restaurant or an office printer
         causing disruptions, you can rely on us for prompt solutions from
         experienced professionals.
@@ -845,7 +845,7 @@ import "css/service-areas/style-service-areas.css";
           src="/images/Essential Appliance-Maintenance-Tips-at-home.webp"
           width="600"
           height="264"
-          alt="Maintenance tips for household appliances in Los Angeles"
+          alt="Maintenance tips for Home appliances in Los Angeles"
         />
         <p>
           $bull; Ensuring that the unit is installed correctly as per the
