--- a/src/pages/areas/marina-del-rey.astro
+++ b/src/pages/areas/marina-del-rey.astro
@@ -38,8 +38,7 @@ import "css/service-areas/style-service-areas.css";
           maintenance services. Customer satisfaction is our priority.
         </p>
         <h2>
-          Same Day Appliance Repair, Installation, and Maintenance for Household
-          Use
+          Same Day Appliance Repair, Installation, and Maintenance for Home Use
         </h2>
         <p>
           Our same day appliance repair experts will fix your appliance on the
@@ -52,11 +51,11 @@ import "css/service-areas/style-service-areas.css";
           <p>
             At Same Day Appliance Repair in Marina Del Rey, our technicians
             bring a wealth of experience to the forefront. With a profound
-            understanding of a wide spectrum of household appliances, they are
-            ready to address any issue. Whether it's your refrigerator, stove,
-            washer, or another essential appliance causing disruptions, our
-            certified and licensed technicians possess the expertise needed to
-            quickly and effectively resolve the problem.
+            understanding of a wide spectrum of Home appliances, they are ready
+            to address any issue. Whether it's your refrigerator, stove, washer,
+            or another essential appliance causing disruptions, our certified
+            and licensed technicians possess the expertise needed to quickly and
+            effectively resolve the problem.
           </p>
           <h2>Prompt and Punctual Solutions - Marina Del Rey</h2>
           <p>
