--- a/src/pages/areas/pasadena/washing-machine-repair-pasadena.astro
+++ b/src/pages/areas/pasadena/washing-machine-repair-pasadena.astro
@@ -94,12 +94,12 @@ import "css/service-areas/style-service-areas.css";
 
           <div class="head_pricing-policy_foto-b">
             <img
-            loading="lazy"
-            width="500px"
-            height="500px"
-            src="/washer-repair/washer1.webp"
-            alt="Best dishwasher repair Pasadena, CA"
-          />
+              loading="lazy"
+              width="500px"
+              height="500px"
+              src="/washer-repair/washer1.webp"
+              alt="Best dishwasher repair Pasadena, CA"
+            />
           </div>
         </div>
 
@@ -414,12 +414,12 @@ c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.3
         efficiently.
       </p>
       <p>
-        Washing machines are essential in every household, and when they break
-        down, it can be a major inconvenience. Our washer repair services are
-        designed to provide a quick and effective solution. When you schedule a
-        service call with our appliance repair experts, you can expect great
-        service and fast service from knowledgeable technicians who are
-        well-versed in repairing various appliance brands.
+        Washing machines are essential in every Home, and when they break down,
+        it can be a major inconvenience. Our washer repair services are designed
+        to provide a quick and effective solution. When you schedule a service
+        call with our appliance repair experts, you can expect great service and
+        fast service from knowledgeable technicians who are well-versed in
+        repairing various appliance brands.
       </p>
 
       <p>
@@ -855,7 +855,7 @@ c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.3
             If your washing machine is not draining, you might need professional
             assistance fixing it. Our appliance repair service in Pasadena, CA,
             specializes in repairing Viking appliances, including washers,
-            dryers, and other household appliances.
+            dryers, and other Home appliances.
           </p>
           <p>
             Our experienced technicians can diagnose what's wrong with your
@@ -920,9 +920,9 @@ c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.3
           <p>
             Our appliance repair business has experienced technicians who can
             diagnose and fix your washing machine's issues promptly. We also
-            service other household appliances like Sub-Zero refrigerators,
-            Viking ovens, and stoves. Whether it's a noisy washer or a
-            malfunctioning fridge, our team can fix your appliance efficiently.
+            service other Home appliances like Sub-Zero refrigerators, Viking
+            ovens, and stoves. Whether it's a noisy washer or a malfunctioning
+            fridge, our team can fix your appliance efficiently.
           </p>
           <p>
             Our company is committed to providing top-notch service to our
@@ -982,7 +982,7 @@ c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.3
               call in the professionals. Our appliance repair business in
               Pasadena specializes in fixing many appliances, including washers,
               dryers, dishwashers, and more. We serve Pasadena and the greater
-              California area, ensuring your household appliances are in optimal
+              California area, ensuring your Home appliances are in optimal
               working condition.
             </p>
             <p>
@@ -1021,7 +1021,7 @@ c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.3
 
           <div class="questions">
             <p>
-              "Yes, we do offer maintenance services for various household
+              "Yes, we do offer maintenance services for various Home
               appliances. Regular maintenance can help prevent costly repairs
               and extend the life of your appliances. Our expert technicians in
               Pasadena are equipped to handle maintenance tasks for a wide range
@@ -1052,7 +1052,7 @@ c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.3
               </li>
               <li>
                 <b> Other Appliances:</b> We also offer maintenance services for
-                household appliances, including washers and more.
+                Home appliances, including washers and more.
               </li>
             </ol>
             <p>
@@ -1064,10 +1064,10 @@ c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.3
             </p>
             <p>
               If you're in Pasadena and need maintenance services for your
-              dishwasher, refrigerator, dryer, oven, stove, or any other
-              household appliance, don't hesitate to contact us. Our skilled
-              technicians will ensure your appliances are in excellent working
-              condition, helping you avoid the need for frequent fixes.
+              dishwasher, refrigerator, dryer, oven, stove, or any other Home
+              appliance, don't hesitate to contact us. Our skilled technicians
+              will ensure your appliances are in excellent working condition,
+              helping you avoid the need for frequent fixes.
             </p>
             <p>
               For reliable maintenance services in Pasadena, reach out to us
@@ -1088,7 +1088,7 @@ c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.3
 
           <div class="questions">
             <p>
-              Maintaining your household appliances is important to ensure they
+              Maintaining your Home appliances is important to ensure they
               function efficiently and last longer. Here’s a quick guide on how
               often you should service some of your key appliances:
             </p>
