--- a/src/pages/areas/santa-monica.astro
+++ b/src/pages/areas/santa-monica.astro
@@ -28,7 +28,7 @@ import "css/service-areas/style-service-areas.css";
       <p>
         If your appliances need repair, you're at the right place. At Same Day
         Appliance Repair in Santa Monica, our skilled technicians excel in
-        fixing both commercial and household appliances. We are committed to
+        fixing both commercial and Home appliances. We are committed to
         resolving various issues, from simple switch replacements to complex
         compressor overhauls, restoring your appliances to optimal working
         condition. Our expertise extends to servicing all major appliance
