--- a/src/pages/brands/commercial-and-household.astro
+++ b/src/pages/brands/commercial-and-household.astro
@@ -18,15 +18,15 @@ import "css/service/style_services.css";
     <div class="content">
       <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
         <h1>
-          Trusted Appliance Repair Services for Commercial and Household Brands
+          Trusted Appliance Repair Services for Commercial and Home Brands
         </h1>
         <p>
           Welcome to Same Day Appliance Repair, your go-to solution for
-          repairing a diverse range of commercial and household appliance
-          brands. We understand the importance of having fully functional
-          appliances in both residential and commercial settings, and our
-          mission is to provide efficient and reliable repair services for
-          various appliance brands.
+          repairing a diverse range of commercial and Home appliance brands. We
+          understand the importance of having fully functional appliances in
+          both residential and commercial settings, and our mission is to
+          provide efficient and reliable repair services for various appliance
+          brands.
         </p>
 
         <h2>Expertise Across a Variety of Brands</h2>
@@ -75,20 +75,20 @@ import "css/service/style_services.css";
           smooth operations.
         </p>
 
-        <h2>Household Appliance Repairs</h2>
+        <h2>Home Appliance Repairs</h2>
 
         <p>
-          Our comprehensive household appliance repair services cover a wide
-          range of products commonly found in homes. Whether it's your kitchen,
-          laundry room, or any other part of your house, we can efficiently
-          diagnose and repair your household appliances to get them back to
-          optimal working condition.
+          Our comprehensive Home appliance repair services cover a wide range of
+          products commonly found in homes. Whether it's your kitchen, laundry
+          room, or any other part of your house, we can efficiently diagnose and
+          repair your Home appliances to get them back to optimal working
+          condition.
         </p>
 
         <h2>Contact Us for Expert Repairs</h2>
 
         <p>
-          If you're experiencing issues with any of your commercial or household
+          If you're experiencing issues with any of your commercial or Home
           appliances from the brands mentioned above or any other brand, reach
           out to us today. Call us at [insert phone number] or use our online
           contact form to schedule an appointment. Our dedicated team is
