--- a/src/pages/price-list/cooktop-repair-cost.astro
+++ b/src/pages/price-list/cooktop-repair-cost.astro
@@ -328,7 +328,7 @@ import "css/price/style_price.css";
     </main>
     <Btn />
 
-    <div class="job-prices  job-prices-cooktop" id="labor-cost-anchor">
+    <div class="job-prices job-prices-cooktop" id="labor-cost-anchor">
       <div class="head_pricing-policy head_pricing-policy_foto">
         <div class="head_pricing-policy_foto-b">
           <img
@@ -918,7 +918,7 @@ import "css/price/style_price.css";
         <p>
           A repair person typically charges a service fee in addition to labor
           costs and any necessary replacement parts. The average price will vary
-          depending on the specific repair needed, the brand of your household
+          depending on the specific repair needed, the brand of your Home
           appliances and some other factor. Some repairs might also be covered
           by home warranty, which will help you in saving money.
         </p>
@@ -972,7 +972,7 @@ import "css/price/style_price.css";
       <div class="FAQ">
         <div class="fa">
           <h3>
-            What are some important considerations when dealing with household
+            What are some important considerations when dealing with Home
             appliance issues, such as malfunctioning gas dryers or broken
             washing machine motors, and how can recognizing these signs help
             prevent expensive repairs?
@@ -986,7 +986,7 @@ import "css/price/style_price.css";
 
       <div class="questions">
         <p>
-          When dealing with household appliances, it's essential to be aware of
+          When dealing with Home appliances, it's essential to be aware of
           common issues that may arise. From a malfunctioning gas dryer to
           broken motors in washing machines, knowing the signs of trouble can
           help prevent costly repairs. Sometimes, it's as simple as replacing
@@ -1010,7 +1010,7 @@ import "css/price/style_price.css";
           repaired frequently, it might be time to consider upgrading.
         </p>
         <p>
-          Remember, maintaining your household appliances and addressing issues
+          Remember, maintaining your Home appliances and addressing issues
           promptly can help prolong their lifespan and reduce the likelihood of
           costly repairs. Whether it's a simple microwave repair or a more
           complex refrigerator repair, prioritizing appliance upkeep can save
@@ -1021,10 +1021,9 @@ import "css/price/style_price.css";
       <div class="FAQ">
         <div class="fa">
           <h3>
-            What are some common household appliance issues, such as
-            malfunctioning stove elements or broken dishwasher motors, and how
-            can timely repairs by experienced technicians help mitigate these
-            problems?
+            What are some common Home appliance issues, such as malfunctioning
+            stove elements or broken dishwasher motors, and how can timely
+            repairs by experienced technicians help mitigate these problems?
           </h3>
         </div>
 
@@ -1039,10 +1038,9 @@ import "css/price/style_price.css";
           others. For example, a malfunctioning stove element can disrupt your
           cooking routine, while problems with electrical power can affect
           multiple appliances at once. Additionally, a broken motor in your
-          dishwasher or dryer can bring your household to a standstill.
-          Fortunately, many of these issues can be resolved with timely dryer
-          repair, microwave repair, or dishwasher repair by experienced
-          technicians.
+          dishwasher or dryer can bring your Home to a standstill. Fortunately,
+          many of these issues can be resolved with timely dryer repair,
+          microwave repair, or dishwasher repair by experienced technicians.
         </p>
         <p>
           One appliance notorious for issues is the garbage disposal. From
@@ -1103,7 +1101,7 @@ import "css/price/style_price.css";
           addressing issues promptly can save you time, money, and inconvenience
           in the long run. Whether it's a garbage disposal acting up or a dryer
           in need of repair, seeking professional assistance when necessary can
-          extend the lifespan of your appliances and ensure your household runs
+          extend the lifespan of your appliances and ensure your Home runs
           smoothly.
         </p>
       </div>
@@ -1145,7 +1143,11 @@ import "css/price/style_price.css";
             if maintained well.
           </li>
         </ul>
-        <p>So in summary, the average lifespan of a cooktop, whether gas or electric, is around 13-15 years, with gas models potentially lasting a bit longer on the high end.</p>
+        <p>
+          So in summary, the average lifespan of a cooktop, whether gas or
+          electric, is around 13-15 years, with gas models potentially lasting a
+          bit longer on the high end.
+        </p>
       </div>
 
       <div class="FAQ_bottom"></div>
