--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -73,13 +73,13 @@ import "css/price/style_price.css";
           <h2>How Much Does It Cost to Repair a Dryer?</h2>
           <p>
             Discussing the average cost to repair is essential when considering
-            the general costs associated with repairing common household
-            appliances. Understanding the average dryer repair costs can help
-            homeowners budget for repairs more effectively. Dryer repair costs
-            can vary based on the type of issue as well as the brand and model
-            of your appliance. Our technician will first need to diagnose the
-            problem to provide you with the most accurate estimate. Following
-            the diagnosis, you’ll receive a detailed price breakdown. This helps
+            the general costs associated with repairing common Home appliances.
+            Understanding the average dryer repair costs can help homeowners
+            budget for repairs more effectively. Dryer repair costs can vary
+            based on the type of issue as well as the brand and model of your
+            appliance. Our technician will first need to diagnose the problem to
+            provide you with the most accurate estimate. Following the
+            diagnosis, you’ll receive a detailed price breakdown. This helps
             make an informed decision about whether to repair or replace your
             dryer and includes recommendations should you consider a
             replacement.
@@ -1155,16 +1155,14 @@ import "css/price/style_price.css";
             notice any signs of reduced dryer performance, such as longer drying
             times or the dryer feeling hot to the touch, it's a good idea to
             check and clean the vents more frequently. Additionally, if you have
-            a large household or do a lot of laundry, you may need to clean the
-            vents more often to ensure optimal dryer efficiency and safety.
+            a large Home or do a lot of laundry, you may need to clean the vents
+            more often to ensure optimal dryer efficiency and safety.
           </p>
         </div>
 
         <div class="FAQ">
           <div class="fa">
-            <h3>
-              What should I do if my dryer is making strange noises?
-            </h3>
+            <h3>What should I do if my dryer is making strange noises?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1370,9 +1368,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <h3>
-              Why does my dryer take longer than usual to dry clothes?
-            </h3>
+            <h3>Why does my dryer take longer than usual to dry clothes?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1461,9 +1457,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                What are the typical costs associated with home appliance
-                repairs, and how do they compare to stove repair costs?
-              </h3>
+              What are the typical costs associated with home appliance repairs,
+              and how do they compare to stove repair costs?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1491,8 +1487,8 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-              What is the average dryer repair cost for electric appliances
-              like an electric dryer?
+              What is the average dryer repair cost for electric appliances like
+              an electric dryer?
             </h3>
           </div>
 
@@ -1512,9 +1508,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                Can the cost to fix a broken dryer vary based on the dryer brand
-                and model?
-              </h3>
+              Can the cost to fix a broken dryer vary based on the dryer brand
+              and model?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1533,9 +1529,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                What are common issues that lead to higher repair cost in gas
-                dryers?
-              </h3>
+              What are common issues that lead to higher repair cost in gas
+              dryers?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1553,10 +1549,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-              <h3>
-                Is it worth repairing a dryer with a bad heating element, or
-                should it be replaced?
-              </h3>
+            <h3>
+              Is it worth repairing a dryer with a bad heating element, or
+              should it be replaced?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1576,9 +1572,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                What should be considered when deciding between frequent repairs
-                and replacing household appliances like clothes dryers?
-              </h3>
+              What should be considered when deciding between frequent repairs
+              and replacing Home appliances like clothes dryers?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1598,9 +1594,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                How do appliance repair service providers calculate the service
-                fee for a service call?
-              </h3>
+              How do appliance repair service providers calculate the service
+              fee for a service call?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1620,9 +1616,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                What is the typical range for appliance repair costs, including
-                complex appliances like washing machines and dishwashers?
-              </h3>
+              What is the typical range for appliance repair costs, including
+              complex appliances like washing machines and dishwashers?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1641,9 +1637,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                Why might some home appliances experience thermostat breaks or
-                door switches issues?
-              </h3>
+              Why might some home appliances experience thermostat breaks or
+              door switches issues?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1662,9 +1658,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                What factors contribute to the decision of whether a broken
-                dryer is worth repairing?
-              </h3>
+              What factors contribute to the decision of whether a broken dryer
+              is worth repairing?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1683,9 +1679,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <h3>
-                How do home warranty plans affect the dryer repair cost?
-              </h3>
+            <h3>How do home warranty plans affect the dryer repair cost?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1705,9 +1699,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                How do appliance repair costs for a gas dryer compare to those
-                for electric dryers?
-              </h3>
+              How do appliance repair costs for a gas dryer compare to those for
+              electric dryers?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1728,9 +1722,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                Can ongoing appliance repair costs for an aging gas dryer
-                justify the initial expense of buying a new model?
-              </h3>
+              Can ongoing appliance repair costs for an aging gas dryer justify
+              the initial expense of buying a new model?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
