--- a/src/pages/price-list/freezer-repair-cost.astro
+++ b/src/pages/price-list/freezer-repair-cost.astro
@@ -1515,18 +1515,18 @@ import "css/price/style_price.css";
       <div class="questions">
         <p>
           Discussing the average appliance repair cost is essential when
-          considering the general costs associated with repairing common
-          household appliances. Appliance repair costs can vary significantly
-          depending on factors such as the brand and model of the appliance, as
-          well as its age and accessibility for the repair specialist. Freezer
-          repair costs can vary based on the type of issue, as well as the brand
-          and model of your appliance. Comparatively, fridge repair cost
-          averages around $250, but with additional service charges, the final
-          bill could reach up to $450, making it sometimes more cost-effective
-          to consider a replacement. Labor costs, including hourly rates for the
-          technician's time and service call fees, significantly contribute to
-          the overall repair cost, especially when considering the need for EPA
-          compliance and the accessibility of the appliance for repair.
+          considering the general costs associated with repairing common Home
+          appliances. Appliance repair costs can vary significantly depending on
+          factors such as the brand and model of the appliance, as well as its
+          age and accessibility for the repair specialist. Freezer repair costs
+          can vary based on the type of issue, as well as the brand and model of
+          your appliance. Comparatively, fridge repair cost averages around
+          $250, but with additional service charges, the final bill could reach
+          up to $450, making it sometimes more cost-effective to consider a
+          replacement. Labor costs, including hourly rates for the technician's
+          time and service call fees, significantly contribute to the overall
+          repair cost, especially when considering the need for EPA compliance
+          and the accessibility of the appliance for repair.
         </p>
       </div>
 
