--- a/src/pages/price-list/microwave-repair-cost.astro
+++ b/src/pages/price-list/microwave-repair-cost.astro
@@ -1387,11 +1387,11 @@ import "css/price/style_price.css";
         <p>
           Free estimates are sometimes available, and DIY repair such as
           replacing the microwave plate or door glass is an option for those
-          comfortable with handling household appliances but caution is
-          necessary, especially with components like the control board or
-          microwave energy system. Regardless of the repair method chosen,
-          addressing unusual noises or energy signals promptly can prevent
-          further damage and reduce overall repair costs.
+          comfortable with handling Home appliances but caution is necessary,
+          especially with components like the control board or microwave energy
+          system. Regardless of the repair method chosen, addressing unusual
+          noises or energy signals promptly can prevent further damage and
+          reduce overall repair costs.
         </p>
         <p>
           A repair person can assess the extent of the issue and provide
@@ -1499,15 +1499,15 @@ import "css/price/style_price.css";
           On average, the cost of microwave repair service, including built-in
           microwaves and countertop models, typically ranges from a few hundred
           dollars to considerably more for complex repairs. Similar to other
-          household appliances microwaves require periodic maintenance and
-          occasional repairs to function optimally. Appliance repair cost
-          whether it's microwave repair cost, garbage disposal repair of a
-          refrigerator repair might be covered by your home warranty. By
-          investing in professional repair services when needed, you can ensure
-          the longevity and reliability of your microwave while minimizing the
-          inconvenience and average costs associated with potential breakdowns.
-          Besides, an average cost of a service call is always less than a
-          microwave repair costs when it's already broken.
+          Home appliances microwaves require periodic maintenance and occasional
+          repairs to function optimally. Appliance repair cost whether it's
+          microwave repair cost, garbage disposal repair of a refrigerator
+          repair might be covered by your home warranty. By investing in
+          professional repair services when needed, you can ensure the longevity
+          and reliability of your microwave while minimizing the inconvenience
+          and average costs associated with potential breakdowns. Besides, an
+          average cost of a service call is always less than a microwave repair
+          costs when it's already broken.
         </p>
       </div>
 
@@ -1523,7 +1523,20 @@ import "css/price/style_price.css";
 
       <div class="questions">
         <p>
-         When it comes to the types of microwaves we service, we cater to both built-in and countertop models. Each option offers its own set of advantages and considerations. Built-in microwaves seamlessly integrate into your kitchen cabinetry, providing a sleek and space-saving solution. However, they tend to be more expensive, with an average cost that reflects their premium design and installation requirements. Countertop microwaves, on the other hand, are more affordable and accessible, boasting a lower average cost compared to their built-in counterparts. Although they do take up valuable counter space, their budget-friendly nature makes them a popular choice for many households. Whether you prefer the built-in elegance or the convenience of a countertop model, we're equipped to handle repairs for both types, ensuring your microwave is back to optimal functionality in no time.
+          When it comes to the types of microwaves we service, we cater to both
+          built-in and countertop models. Each option offers its own set of
+          advantages and considerations. Built-in microwaves seamlessly
+          integrate into your kitchen cabinetry, providing a sleek and
+          space-saving solution. However, they tend to be more expensive, with
+          an average cost that reflects their premium design and installation
+          requirements. Countertop microwaves, on the other hand, are more
+          affordable and accessible, boasting a lower average cost compared to
+          their built-in counterparts. Although they do take up valuable counter
+          space, their budget-friendly nature makes them a popular choice for
+          many Homes. Whether you prefer the built-in elegance or the
+          convenience of a countertop model, we're equipped to handle repairs
+          for both types, ensuring your microwave is back to optimal
+          functionality in no time.
         </p>
       </div>
 
