--- a/src/pages/price-list/oven-repair-cost.astro
+++ b/src/pages/price-list/oven-repair-cost.astro
@@ -42,7 +42,7 @@ import "css/price/style_price.css";
       <div class="two-col-grid">
         <div class="col-one">
           <img
-          loading="lazy"
+            loading="lazy"
             width="500px"
             height="500px"
             src="/img-price/oven-repair-cost/oven-repair-cost-1.webp"
@@ -96,7 +96,7 @@ import "css/price/style_price.css";
 
           <div class="head_pricing-policy_foto-b">
             <img
-            loading="lazy"
+              loading="lazy"
               width="500px"
               height="500px"
               src="/img-price/oven-repair-cost/oven-repair-cost-near-me-2.webp"
@@ -319,7 +319,7 @@ import "css/price/style_price.css";
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
-            loading="lazy"
+              loading="lazy"
               width="600px"
               height="500px"
               src="/img-price/oven-repair-cost/electric-oven-repair-cost-3.webp"
@@ -571,7 +571,7 @@ import "css/price/style_price.css";
 
           <div class="head_pricing-policy_foto-b">
             <img
-            loading="lazy"
+              loading="lazy"
               width="600px"
               height="500px"
               src="/img-price/oven-repair-cost/oven-replacement-parts-cost-4.webp"
@@ -579,7 +579,6 @@ import "css/price/style_price.css";
             />
           </div>
         </div>
-
 
         <div class="content_job-prices" id="col-prices">
           <div class="desk_job-prices">
@@ -769,7 +768,7 @@ import "css/price/style_price.css";
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
-            loading="lazy"
+              loading="lazy"
               width="600px"
               height="500px"
               src="/img-price/oven-repair-cost/ways-to-save-money-on-oven-repair-5.webp"
@@ -1397,7 +1396,7 @@ import "css/price/style_price.css";
             <h3>
               What common issues might I encounter with my oven that would
               require repairs, and how do these compare to issues found in other
-              household appliances like washing machines or garbage disposals?
+              Home appliances like washing machines or garbage disposals?
             </h3>
           </div>
 
@@ -1460,7 +1459,6 @@ import "css/price/style_price.css";
         <div class="FAQ_bottom"></div>
       </div>
       <Btn />
-
     </main>
   </Container>
 </Layout>
