--- a/src/pages/price-list/range-repair-cost.astro
+++ b/src/pages/price-list/range-repair-cost.astro
@@ -77,14 +77,14 @@ import "css/price/style_price.css";
           <h2>How Much Does It Cost to Repair a Range?</h2>
           <p>
             Discussing the average appliance repair cost is essential when
-            considering the general costs associated with repairing common
-            household appliances. Range repair costs can vary based on the type
-            of issue as well as the brand and model of your appliance. Our
-            technician will first need to diagnose the problem to provide you
-            with the most accurate estimate. Following the diagnosis, you’ll
-            receive a detailed price breakdown. This helps make an informed
-            decision about whether to repair or replace your range and includes
-            recommendations should you consider a replacement.
+            considering the general costs associated with repairing common Home
+            appliances. Range repair costs can vary based on the type of issue
+            as well as the brand and model of your appliance. Our technician
+            will first need to diagnose the problem to provide you with the most
+            accurate estimate. Following the diagnosis, you’ll receive a
+            detailed price breakdown. This helps make an informed decision about
+            whether to repair or replace your range and includes recommendations
+            should you consider a replacement.
           </p>
         </div>
       </div>
