--- a/src/pages/price-list/refrigerator-repair-cost.astro
+++ b/src/pages/price-list/refrigerator-repair-cost.astro
@@ -71,11 +71,11 @@ import "css/price/style_price.css";
           <h2>How Much Does It Cost to Repair a Refrigerator?</h2>
           <p>
             Discussing the average appliance repair cost is essential when
-            considering the general costs associated with repairing common
-            household appliances. Refrigerator repair costs can vary based on
-            the type of issue as well as the brand and model of your appliance.
-            Our technician will first need to diagnose the problem to provide
-            you with the most accurate estimate. Following the diagnosis, you’ll
+            considering the general costs associated with repairing common Home
+            appliances. Refrigerator repair costs can vary based on the type of
+            issue as well as the brand and model of your appliance. Our
+            technician will first need to diagnose the problem to provide you
+            with the most accurate estimate. Following the diagnosis, you’ll
             receive a detailed price breakdown. This helps make an informed
             decision about whether to repair or replace your refrigerator and
             includes recommendations should you consider a replacement.
@@ -1129,7 +1129,7 @@ import "css/price/style_price.css";
 
       <div class="FAQ">
         <div class="fa">
-          <h3>Which household appliances need the most repairs?</h3>
+          <h3>Which Home appliances need the most repairs?</h3>
         </div>
 
         <div class="fa_plus">︾</div>
@@ -1406,8 +1406,8 @@ import "css/price/style_price.css";
         <div class="fa">
           <h3>
             What are typical costs associated with refrigerator repair, and how
-            do these compare to the costs of fixing other household appliances
-            like dishwashers and freezers?
+            do these compare to the costs of fixing other Home appliances like
+            dishwashers and freezers?
           </h3>
         </div>
 
