--- a/src/pages/price-list/stove-repair-cost.astro
+++ b/src/pages/price-list/stove-repair-cost.astro
@@ -83,10 +83,10 @@ import "css/price/style_price.css";
           </p>
           <p>
             Discussing the average cost to repair a stove is essential when
-            considering the general costs associated with repairing common
-            household appliances, including both stoves and ovens. Understanding
-            the average stove and oven repair costs can help homeowners budget
-            for repairs more effectively. Appliance repair costs, including oven
+            considering the general costs associated with repairing common Home
+            appliances, including both stoves and ovens. Understanding the
+            average stove and oven repair costs can help homeowners budget for
+            repairs more effectively. Appliance repair costs, including oven
             repair cost, can vary significantly depending on factors such as the
             brand and model of the appliance, its age, and accessibility for the
             repair specialist, the type of issue, similar to oven repair costs
@@ -355,7 +355,7 @@ import "css/price/style_price.css";
     </main>
     <Btn />
 
-    <div class="job-prices  job-prices-stove" id="labor-cost-anchor">
+    <div class="job-prices job-prices-stove" id="labor-cost-anchor">
       <div class="head_pricing-policy head_pricing-policy_foto">
         <div class="head_pricing-policy_foto-b">
           <img
@@ -1400,7 +1400,7 @@ import "css/price/style_price.css";
           </li>
         </ul>
       </div>
-      
+
       <div class="FAQ_bottom"></div>
     </div>
     <Btn />
