--- a/src/pages/services/bar-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/bar-refrigerator-repair-los-angeles.astro
@@ -65,8 +65,8 @@ import "css/service/style_services.css";
               call us back with a bar refrigerator issue within three months
               after the repair. Repairing your bar refrigerator is as important
               to us as it is to you. We strive to provide absolutely the best
-              services in repairing your bar refrigerator. This is why we promise a full
-              refund if we cannot repair it.
+              services in repairing your bar refrigerator. This is why we
+              promise a full refund if we cannot repair it.
             </p>
           </div>
         </div>
@@ -739,9 +739,9 @@ import "css/service/style_services.css";
 
               <h3>GE (General Electric)</h3>
               <p>
-                GE appliances are also a staple in many households, known for
-                their advanced features and robust performance. Repairing a GE
-                bar refrigerator can be slightly more expensive due to the
+                GE appliances are also a staple in many Homes, known for their
+                advanced features and robust performance. Repairing a GE bar
+                refrigerator can be slightly more expensive due to the
                 specialized parts and technology involved. Common issues might
                 include problems with the evaporator fan motor, condenser coils,
                 or control boards. The cost for a simple repair, like replacing
@@ -820,7 +820,7 @@ import "css/service/style_services.css";
                 issues might include problems with the thermostat, evaporator fan
                 motor, or condenser coils. The widespread availability of Kenmore
                 parts and technicians helps keep repair costs reasonable, making
-                it a popular choice for many households.
+                it a popular choice for many Homes.
               </p>
 
               <p>
