--- a/src/pages/services/commercial-and-household-los-angeles.astro
+++ b/src/pages/services/commercial-and-household-los-angeles.astro
@@ -14,15 +14,15 @@ import "css/service/style_services.css";
 <Navbar />
 <Reviews />
 <Layout
-  title="Commercial And Household Appliance Repair Los Angeles and Surrounding Areas">
+  title="Commercial And Home Appliance Repair Los Angeles and Surrounding Areas">
   <Container>
     <main>
       <div class="content">
-        <h1>Commercial & Household Appliance Repair</h1>
+        <h1>Commercial & Home Appliance Repair</h1>
         <div
           style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
           <h1>
-            Commercial & Household Appliance Repair Services in Los Angeles and
+            Commercial & Home Appliance Repair Services in Los Angeles and
             Surrounding Areas
           </h1>
           <p>
@@ -38,7 +38,7 @@ import "css/service/style_services.css";
 
           <p>
             At LA Appliance Repair Pros, we specialize in servicing a wide range
-            of commercial and household appliances. Our comprehensive repair
+            of commercial and Home appliances. Our comprehensive repair
             solutions include:
           </p>
 
