--- a/src/pages/services/commercial-dryer-repair-los-angeles.astro
+++ b/src/pages/services/commercial-dryer-repair-los-angeles.astro
@@ -66,8 +66,8 @@ import "css/service/style_services.css";
               call us back with a commercial dryer issue within three months
               after the repair. Repairing your commercial dryer is as important
               to us as it is to you. We strive to provide absolutely the best
-              services in repairing your commercial dryer. This is why we promise a full
-              refund if we cannot repair it.
+              services in repairing your commercial dryer. This is why we
+              promise a full refund if we cannot repair it.
             </p>
           </div>
         </div>
@@ -2367,7 +2367,7 @@ import "css/service/style_services.css";
                     commercial appliance repair, offering reliable appliance
                     repair service in the Pasadena area. Whether you need
                     maintenance for your dryer, washer, dishwasher, or any other
-                    household or commercial appliances, we've got you covered.
+                    Home or commercial appliances, we've got you covered.
                   </p>
                   <p>
                     It's essential to keep your commercial dryer in optimal
@@ -2691,7 +2691,7 @@ import "css/service/style_services.css";
                     Pasadena, it's essential to follow a regular maintenance
                     schedule. Same Day Appliance Repair offers expert services
                     for a variety of appliances. Here’s a general maintenance
-                    guide tailored to some common household appliances:
+                    guide tailored to some common Home appliances:
                   </p>
                   <b>Refrigerator Maintenance</b>
                   <ol>
@@ -2914,8 +2914,7 @@ import "css/service/style_services.css";
                 <div class="FAQ">
                   <div class="fa">
                     <h3>
-                      Can I use household dryer parts for commercial dryer
-                      repairs?
+                      Can I use Home dryer parts for commercial dryer repairs?
                     </h3>
                   </div>
 
@@ -2926,10 +2925,10 @@ import "css/service/style_services.css";
 
                 <div class="questions">
                   <p>
-                    Using household dryer parts for commercial dryer repairs is
+                    Using Home dryer parts for commercial dryer repairs is
                     generally not recommended. Commercial dryers are designed to
                     handle much larger loads and more frequent use compared to
-                    household dryers. As a result, the parts used in commercial
+                    Home dryers. As a result, the parts used in commercial
                     laundry equipment are typically more robust and durable to
                     withstand the demands of a commercial environment.
                   </p>
@@ -2938,9 +2937,9 @@ import "css/service/style_services.css";
                     of using the right parts for your repairs. Our
                     factory-trained technicians use only genuine
                     commercial-grade parts to ensure the longevity and optimal
-                    performance of your commercial dryers. Using household parts
-                    may not only lead to frequent breakdowns but could also void
-                    any existing warranties on your equipment
+                    performance of your commercial dryers. Using Home parts may
+                    not only lead to frequent breakdowns but could also void any
+                    existing warranties on your equipment
                   </p>
                   <p>
                     If you find yourself in need of a repair, simply reach out
