--- a/src/pages/services/microwave-repair-los-angeles.astro
+++ b/src/pages/services/microwave-repair-los-angeles.astro
@@ -1449,13 +1449,13 @@ import "css/service/style_services.css";
               <h3>Frequency of Professional Maintenance:</h3>
               <ul>
                 <li>
-                  <b>Annual Check-Up: </b>For most households, an annual
-                  professional maintenance check is typically sufficient.
+                  <b>Annual Check-Up: </b>For most Homes, an annual professional
+                  maintenance check is typically sufficient.
                 </li>
                 <li>
                   <b>High-Usage Scenarios: </b>If your microwave is heavily used
-                  (e.g., in a commercial setting or a large household), more
-                  frequent maintenance might be recommended.
+                  (e.g., in a commercial setting or a large Home), more frequent
+                  maintenance might be recommended.
                 </li>
               </ul>
 
