--- a/src/pages/services/range-repair-los-angeles.astro
+++ b/src/pages/services/range-repair-los-angeles.astro
@@ -73,7 +73,6 @@ import "css/service/style_services.css";
     </main>
 
     <div class="page213">
-
       <div class="open-full_left">
         <svg
           width="40px"
@@ -2379,7 +2378,6 @@ import "css/service/style_services.css";
 
           <div class="content__page-full-desc">
             <div class="content__page-desc">
-
               <div class="faq-full" id="faqs-anchor">
                 <div class="FAQ">
                   <div class="fa">
@@ -2665,8 +2663,8 @@ import "css/service/style_services.css";
                           service. Our factory-trained technicians aim to fix
                           most issues on the first visit. We also service other
                           appliances like dishwashers, dryers, and
-                          refrigerators, so you can trust us with all your
-                          household appliance needs.
+                          refrigerators, so you can trust us with all your Home
+                          appliance needs.
                         </li>
                       </ul>
                     </li>
@@ -3013,7 +3011,7 @@ import "css/service/style_services.css";
                       <b>Other Appliances:</b>
                       <ul>
                         <li>
-                          Issues with other household appliances like your
+                          Issues with other Home appliances like your
                           dishwasher, dryer, or refrigerator should also be
                           addressed promptly. Same Day Repair can handle these
                           as well, ensuring your kitchen and laundry room run
@@ -3051,9 +3049,9 @@ import "css/service/style_services.css";
 
                   <p>
                     If you’re experiencing issues with your range or any other
-                    household appliances, don’t hesitate to contact Same Day
-                    Repair. Our skilled technicians are ready to help with your
-                    stove, dishwasher, dryer, refrigerator, and more.
+                    Home appliances, don’t hesitate to contact Same Day Repair.
+                    Our skilled technicians are ready to help with your stove,
+                    dishwasher, dryer, refrigerator, and more.
                   </p>
                   <p>
                     Feel free to reach out to us for any questions or to
@@ -3062,22 +3060,18 @@ import "css/service/style_services.css";
                 </div>
 
                 <div class="FAQ_bottom"></div>
-
               </div>
-
             </div>
           </div>
           <Btn />
         </div>
-
       </div>
-
     </div>
   </Container>
 </Layout>
 <Cta />
 
-  <Arrow />
-  <Focus />
-  <Faqs />
+<Arrow />
+<Focus />
+<Faqs />
 <LogoBrands />
