--- a/src/pages/services/refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/refrigerator-repair-los-angeles.astro
@@ -24,7 +24,8 @@ import "css/service/style_services.css";
           <div class="page-header-d">
             <h1>
               <span class="animate-charcter"
-                >Refrigerator Repair Los Angeles and Nearby Areas</span>
+                >Refrigerator Repair Los Angeles and Nearby Areas</span
+              >
             </h1>
           </div>
         </div>
@@ -723,7 +724,7 @@ import "css/service/style_services.css";
                 between <b>$400 and $700</b>. The availability of parts and the
                 widespread presence of GE-certified technicians can help keep
                 repair costs reasonable and turnaround times quick, making GE a
-                practical choice for many households.
+                practical choice for many Homes.
               </p>
 
               <h3>Maytag</h3>
@@ -4328,7 +4329,6 @@ import "css/service/style_services.css";
           <Btn />
         </div>
       </div>
-      
     </div>
   </Container>
 </Layout>
