--- a/src/pages/services/washing-machine-repair-los-angeles.astro
+++ b/src/pages/services/washing-machine-repair-los-angeles.astro
@@ -204,7 +204,7 @@ import "css/service/style_services.css";
               <div class="content__page-desc">
                 <h3>Top-Load Washers</h3>
                 <p>
-                  Are a popular choice for many households due to their ease of
+                  Are a popular choice for many Homes due to their ease of
                   use and quick wash cycles. Common repair needs include
                   addressing issues with the motor, pump, and agitation cycle.
                   Problems such as a broken belt or a clogged drain hose can
@@ -2770,7 +2770,7 @@ import "css/service/style_services.css";
                             Symptoms: Water backs up into the washing machine
                           </li>
                           <li>
-                            Solution: The issue could be with the household
+                            Solution: The issue could be with the Home
                             drain pipe where the washing machine's drain hose is
                             inserted. Ensure the drain pipe is not clogged. You
                             may need to use a plumber's snake to clear any
