--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -29,7 +29,7 @@ import "@components/css-components/style-features.css";
 <!-- <div class="mt-16 md:mt-0">
 
   <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    Same Day Appliance Repair Services for Commercial & Household Use
+    Same Day Appliance Repair Services for Commercial & Home Use
   </h2>
   <p class="text-lg mt-4 text-slate-600">
     Over the years, we have helped thousands of customers, alleviating the stress that comes when appliances malfunction. Our quick response time and efficient work ethic form the cornerstone of our operational approach, aiming to resolve your appliance issues promptly and proficiently.
@@ -52,9 +52,8 @@ import "@components/css-components/style-features.css";
   }
   </div>  -->
 <div class="full-our-advantages">
-
   <div class="heder-our-advantages">
-    <h2>Same Day Appliance Repair Services for Commercial & Household Use</h2>
+    <h2>Same Day Appliance Repair Services for Commercial & Home Use</h2>
     <p>
       Over the years, we have helped thousands of customers, alleviating the
       stress that comes when appliances malfunction. Our quick response time and
@@ -64,7 +63,6 @@ import "@components/css-components/style-features.css";
   </div>
 
   <div class="conteiner-our-advantages">
-
     <div class="content-our-advantages">
       <div class="f_our-advantages">
         <svg
@@ -127,7 +125,7 @@ import "@components/css-components/style-features.css";
             fill-rule="evenodd"
             clip-rule="evenodd"
             d="M12 2.75C6.89137 2.75 2.75 6.89137 2.75 12C2.75 17.1086 6.89137 21.25 12 21.25C17.1086 21.25 21.25 17.1086 21.25 12C21.25 6.89137 17.1086 2.75 12 2.75ZM1.25 12C1.25 6.06294 6.06294 1.25 12 1.25C17.9371 1.25 22.75 6.06294 22.75 12C22.75 17.9371 17.9371 22.75 12 22.75C6.06294 22.75 1.25 17.9371 1.25 12ZM12 5.25C12.4142 5.25 12.75 5.58579 12.75 6V6.31673C14.3804 6.60867 15.75 7.83361 15.75 9.5C15.75 9.91421 15.4142 10.25 15 10.25C14.5858 10.25 14.25 9.91421 14.25 9.5C14.25 8.65573 13.3765 7.75 12 7.75C10.6235 7.75 9.75 8.65573 9.75 9.5C9.75 10.3443 10.6235 11.25 12 11.25C13.9372 11.25 15.75 12.5828 15.75 14.5C15.75 16.1664 14.3804 17.3913 12.75 17.6833V18C12.75 18.4142 12.4142 18.75 12 18.75C11.5858 18.75 11.25 18.4142 11.25 18V17.6833C9.61957 17.3913 8.25 16.1664 8.25 14.5C8.25 14.0858 8.58579 13.75 9 13.75C9.41421 13.75 9.75 14.0858 9.75 14.5C9.75 15.3443 10.6235 16.25 12 16.25C13.3765 16.25 14.25 15.3443 14.25 14.5C14.25 13.6557 13.3765 12.75 12 12.75C10.0628 12.75 8.25 11.4172 8.25 9.5C8.25 7.83361 9.61957 6.60867 11.25 6.31673V6C11.25 5.58579 11.5858 5.25 12 5.25Z"
-            ></path>
+          ></path>
         </svg>
       </div>
 
@@ -139,7 +137,5 @@ import "@components/css-components/style-features.css";
         </h3>
       </div>
     </div>
-
   </div>
-
 </div>
